# covid_simulator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  location.cpp  location.hpp  mobility_model.cpp  mobility_model.hpp  person.cpp  person.hpp  ppmodel.cpp  ppmodel.hpp  simulator.cpp  simulator.hpp  ui.cpp  ui.hpp  utilities.cpp  utilities.hpp
